# qontinui-web-mcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.pre-commit-hooks/: block-claude-attribution.sh
src/qontinui_web_mcp/: __init__.py  server.py
src/qontinui_web_mcp/client/: __init__.py  api.py
src/qontinui_web_mcp/tools/: __init__.py  auth.py  capture.py  configuration.py  execution.py  projects.py  transitions.py  variables.py
src/qontinui_web_mcp/types/: __init__.py  models.py
src/qontinui_web_mcp/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_client.py  test_models.py  test_server.py  test_tools.py
