[tool.poetry]
name = "qontinui-web-mcp"
version = "0.1.0"
description = "MCP server for Qontinui web platform - enables AI to create and manage automation configurations"
authors = ["Qontinui Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "qontinui_web_mcp", from = "src"}]

[tool.poetry.scripts]
qontinui-web-mcp = "qontinui_web_mcp.server:main"

[tool.poetry.dependencies]
python = "^3.12"
mcp = "^1.0.0"
pydantic = "^2.0.0"
httpx = "^0.28.0"
pydantic-settings = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^7.0.0"
ruff = "^0.14.0"
mypy = "^1.14.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pre-commit = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
